Apply API changes from 'mongodb' branch
